# kok-rag

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
data/recipes/: laphet---tea-leaf-salad.txt  soup.txt  stew.txt
scripts/: reindex.py
src/: api.py  chat.py  config.py  constants.py  dependencies.py  embed.py  ingest.py  main.py  scrape.py  scrape_recipes.py  ui.py  utils.py
src/core/: constants.py  logging.py
src/models/: recipe.py  schemas.py
src/routers/: ask.py  health.py  ingest.py
src/services/: agent.py  embedding.py  ingestion.py  retrieval.py  scraper.py  search.py  tools.py
